Docker generate backend data

--- a/web_app/templates/registration/register.html
+++ b/web_app/templates/registration/register.html
@@ -4,7 +4,7 @@
 <form action="/accounts/submit/" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Submit" class="btn btn-primary" />
+    <input type="submit" value="Submit" class="btn btn-success" />
 </form>
 </div>
 {% endblock %}
