--- a/web_app/templates/contact.html
+++ b/web_app/templates/contact.html
@@ -5,7 +5,7 @@
 <div class="bg-light py-3">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 mb-0"><a href="/index">Home</a> <span class="mx-2 mb-0">/</span> <strong
+      <div class="col-md-12 mb-0"><a href="/index"><span class="text-success">Home</span></a> <span class="mx-2 mb-0">/</span> <strong
           class="text-black">Contact</strong></div>
     </div>
   </div>
@@ -53,26 +53,11 @@
             </div>
             <div class="form-group row">
               <div class="col-lg-12">
-                <input type="submit" class="btn btn-primary btn-lg btn-block" value="Send Message">
+                <input type="submit" class="btn btn-success btn-lg btn-block" value="Send Message">
               </div>
             </div>
           </div>
         </form>
-      </div>
-      <div class="col-md-5 ml-auto">
-        <div class="p-4 border mb-3">
-          <span class="d-block text-primary h6 text-uppercase">New York</span>
-          <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
-        </div>
-        <div class="p-4 border mb-3">
-          <span class="d-block text-primary h6 text-uppercase">London</span>
-          <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
-        </div>
-        <div class="p-4 border mb-3">
-          <span class="d-block text-primary h6 text-uppercase">Canada</span>
-          <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
-        </div>
-
       </div>
     </div>
   </div>
