--- a/web_app/templates/orders.html
+++ b/web_app/templates/orders.html
@@ -5,7 +5,7 @@
 <div class="bg-light py-3">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 mb-0"><a href="/index">Home</a> <span class="mx-2 mb-0">/</span> <strong
+      <div class="col-md-12 mb-0"><a href="/index"><span class="text-success">Home</span></a> <span class="mx-2 mb-0">/</span> <strong
           class="text-black">Orders</strong></div>
     </div>
   </div>
