--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="text">
           <h2 class="text-uppercase">Free Shipping</h2>
-          <p>In our fake world, we ship everywhere for free!</p>
+          <p>You take care of the shipping. We take care of the shipping!</p>
         </div>
       </div>
       <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="100">
@@ -36,7 +36,7 @@
         </div>
         <div class="text">
           <h2 class="text-uppercase">Free Returns</h2>
-          <p>Free returns for all our virtual products!</p>
+          <p>If you are not satisfied with our products, return at any time!</p>
         </div>
       </div>
       <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="200">
@@ -45,7 +45,7 @@
         </div>
         <div class="text">
           <h2 class="text-uppercase">Customer Support</h2>
-          <p>Good luck reaching out to us!</p>
+          <p>Contact us if you need some help!</p>
         </div>
       </div>
     </div>
