--- a/web_app/templates/thankyou.html
+++ b/web_app/templates/thankyou.html
@@ -5,7 +5,7 @@
 <div class="bg-light py-3">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 mb-0"><a href="/index">Home</a> <span class="mx-2 mb-0">/</span> <strong
+      <div class="col-md-12 mb-0"><a href="/index"><span class="text-success">Home</span></a> <span class="mx-2 mb-0">/</span> <strong
           class="text-black">Contact</strong></div>
     </div>
   </div>
@@ -18,7 +18,7 @@
         <span class="icon-check_circle display-3 text-success"></span>
         <h2 class="display-3 text-black">Thank you!</h2>
         <p class="lead mb-5">You order was successfuly completed.</p>
-        <p><a href="/shop" class="btn btn-sm btn-primary">Back to shop</a></p>
+        <p><a href="/shop" class="btn btn-sm btn-success">Back to shop</a></p>
       </div>
     </div>
   </div>
